[package]
name = "dft"
version = "0.4.3"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an algorithm to compute the discrete Fourier transform."
documentation = "https://stainless-steel.github.io/dft"
homepage = "https://github.com/stainless-steel/dft"
repository = "https://github.com/stainless-steel/dft"

[dependencies.num-complex]
version = "0.1"
default-features = false

[dev-dependencies]
assert = "0.6"
